--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/webpack --config webpack.config.dev.js"
+    "dev": "./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
@@ -44,9 +44,11 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.7",
-    "sass-resources-loader": "^1.3.3",
+    "sass-resources-loader": "^1.3.5",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "webpack": "^4.3.0"
+    "webpack": "^4.3.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.1"
   }
 }
