--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -5,9 +5,13 @@
     "window": true,
     "document": true,
     "module": true,
-    "require": true
+    "require": true,
+    "console": true,
+    "debugger": true
   },
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-console": "off",
+    "no-debugger": "off"
   }
 }
