--- a/src/.babelrc
+++ b/src/.babelrc
@@ -3,5 +3,13 @@
     "es2015",
     "react",
     "stage-0"
+  ],
+  "plugins": [
+    ["transform-runtime", {
+      "helper": false,
+      "polyfill": false,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
+    }]
   ]
 }
